gccida/c1/bitmap_copy
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_copy/src/bitmap.c:728:12: error: expected expression
*( _OWORD *)v4->bits = *( _OWORD *)first->bits; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_copy/src/bitmap.c:728:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v4->bits = *( _OWORD *)first->bits; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_copy/src/bitmap.c:740:12: error: expected expression
*( _OWORD *)&v4->next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_copy/src/bitmap.c:740:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v4->next = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_copy/src/obj/bitmap.o] Error 1
